[package]
name = "idr-ebr"
version = "0.1.1"
edition = "2021"
authors = ["Paul Loyd <pavelko95@gmail.com>"]
readme = "README.md"
license = "MIT"
keywords = ["idr", "ebr", "slab", "lock-free", "wait-free"]
categories = ["data-structures", "concurrency"]
description = "An efficient concurrent ID to object resolver"
documentation = "https://docs.rs/idr-ebr/"
homepage = "https://github.com/loyd/idr-ebr"
repository = "https://github.com/loyd/idr-ebr"

[lints.rust]
rust_2018_idioms = "warn"
unreachable_pub = "warn"
missing_docs = "warn"
missing_debug_implementations = "warn"

[lints.clippy]
undocumented_unsafe_blocks = "warn"

pedantic = { level = "warn", priority = -1 }
doc_markdown = "allow" # false positive
inline_always = "allow"
module_name_repetitions = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
similar_names = "allow"
items_after_statements = "allow"

[[bench]]
name = "contention"
harness = false

[dependencies]
scc = "2"
fastrand = "2"

[target.'cfg(loom)'.dependencies]
loom = { version = "0.7", features = ["checkpoint"] }

[dev-dependencies]
criterion = "0.5.1"
mimalloc = { version = "0.1.29", default_features = false }
trybuild = "1"
proptest = "1"
indexmap = "2"
tracing = "0.1.40"
sharded-slab = "0.1.7" # for benchmarking

[profile.release]
debug = 1
